update Lua.java